Camera API test
Tested Camera Access API code from Web API ppt.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/homepage.css">
-    <script src="scripts/homepage.js"></script>
+    <script src="scripts/homepage.js" defer></script>
 </head>
 <body>
 
-    <h1>HELLO awesome member of the WEB REALM!!!</h1>
+    <div>
+        <button id="start">Start Camera</button>
+        <button id="snap">Snap Photo</button>
+        <button id="stop">Stop Camera</button>
+      </div>
+      <br />
+      <video id="video" width="320" height="240" autoplay></video>
+      <br />
+      <canvas id="canvas" width="320" height="240"></canvas>
+  
     
 </body>
 </html>
