--- a/src/pages/addpost.html
+++ b/src/pages/addpost.html
@@ -35,7 +35,7 @@
             
             <div>
               <form id="postForm">
-    
+                <!-- karan -->
                 <input type="radio" id="lostRadioButton" name="lost" value="lost">
                 <label for="lost">Lost</label>
                 <br>
