Upload Image done
Image upload to firebase storage done.
Added Username in Grid view.

--- a/src/pages/addpost.html
+++ b/src/pages/addpost.html
@@ -57,7 +57,7 @@
                 
                 <br><br>
                 <label for="myfile">Upload Item photo: </label>
-                <input type="file" id="myfile" name="myfile"><br><br>
+                <input type="file" id="itemimage" name="myfile"><br><br>
     
                 <input type="submit" id="submitpostbutton" value="Submit">
               </form>
