View Post partially fixed
View post only works for the last item.
A few data fields showing only.

--- a/src/pages/viewpost.html
+++ b/src/pages/viewpost.html
@@ -1,3 +1,6 @@
 <div>
-    View Single Post
+    <div id = "title"><br></div>
+    <div id = "desc"><br></div>
+    <div id = "username"><br></div>
+    <img id="itemimage" width="600" height="500">
 </div>
