Basic Filters done
Lost, Found, Date Filters done.
Geolocation n sorting left.

--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -31,11 +31,13 @@
         <tr>
             <td></td>
             <td></td>
+            <td style="float:right; padding-right: 10px;"><button id="clearFilterButton" style="padding: 10px 24px;">Clear Filters</button></td>
             <td style="float:right; padding-right: 10px;">
-                <button style="padding: 10px 24px;">lost</button>
+                <button id="lostFilterButton" style="padding: 10px 24px;">Lost</button>
                 </td>
-                <td style="float:right; padding-right: 10px;"><button style="padding: 10px 24px;">Found</button></td>
-                <td style="float:right; padding-right: 10px;"><button style="padding: 10px 24px;">Date</button></td>
+                <td style="float:right; padding-right: 10px;"><button id="foundFilterButton" style="padding: 10px 24px;">Found</button></td>
+<!--            <td style="float:right; padding-right: 10px;"><button style="padding: 10px 24px;">Date</button></td>              -->
+                <td style="float:right; padding-right: 10px;"><input id="dateFilter" type="date" style="padding: 10px 24px;"></td>
                 <td style="float:right; padding-right: 10px;">
                 <button style="padding: 10px 24px;">Location</button>
 
