--- a/src/pages/viewpost.html
+++ b/src/pages/viewpost.html
@@ -1,4 +1,8 @@
+<style>
+    
+</style>
 <div>
+    <div class="details">
     <div id = "title"><br></div>
     <div id = "desc"><br></div>
     <div id = "username"><br></div>
