--- a/src/pages/useracc.html
+++ b/src/pages/useracc.html
@@ -1,6 +1,8 @@
 
 <div>
-    <div id="username"></div>
+    <div id="useraccountcontainer"></div>
     <br>
+    <img id="userimage" width="600" height="400"> <br>
+
     <input type="button" id="signoutbutton" value="Sign Out">
 </div>
