Fixed Addpost failure
Id title was defined twice in html

--- a/src/pages/addpost.html
+++ b/src/pages/addpost.html
@@ -460,7 +460,7 @@
     
     <section class="formwrap">
       <div class="container">
-        <div id="title"><h1>New post</h1></div>
+        <div><h1>New post</h1></div>
         <form action="action_page.php">
           <div class="addpostview">
             <div class="formphotos">
