Homepage and User Account Front End

--- a/src/pages/viewpost.html
+++ b/src/pages/viewpost.html
@@ -112,6 +112,14 @@
     margin-bottom: 30px;
   }
 
+  #messagebox {
+	width: 100%;
+	padding: 10px;
+	height: 50px;
+	margin-bottom: 15px;
+    font-size: 16px;
+}
+
   @media (max-width: 1200px) {
     .singleproductview {
       gap: 30px;
@@ -152,8 +160,8 @@
         </div>
         <div class="promsg">
             <!-- Send Message: <br> -->
-            <input type="text" id="messagebox">
-            <input class="productcontact" type="button" id="sendmessagebutton" value="Send">
+            <input type="text" id="messagebox" placeholder="Enter your message">
+            <input class="productcontact" type="button" id="sendmessagebutton" value="Send Message">
         
         </div>
         <!-- <input  type="button" value="Contact Owner" /> -->
