Show Map in View Post

--- a/src/pages/useracc.html
+++ b/src/pages/useracc.html
@@ -41,6 +41,20 @@
     #useraccountcontainer h3 span {
         font-weight: 600;
     }
+
+    @media (max-width: 770px) {
+        .usercard {
+            display: inline-block;
+            text-align: center;
+            width: 360px;
+            gap: 20px;
+        }
+
+        .userimage {
+            margin-bottom: 20px;
+        }
+    }
+
  </style>
 
     <div class="usercard">
