--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -187,7 +187,8 @@
         </p>
         <p>Join us to create your post</p>
 
-        <a class="defaultbutton" href="#">Join</a>
+<!--        <a class="defaultbutton" href="#">Join</a>    -->
+        <button id="joinButton" class="defaultbutton">Join</button>
       </div>
       <div class="bannerimage">
         <img src="../images/man.png" alt="Avatar" />
@@ -202,9 +203,9 @@
     <ul>
       <li><button id="lostFilterButton">Lost</button></li>
       <li><button id="foundFilterButton">Found</button></li>
-      <li><button>Date</button></li>
       <li><input id="dateFilter" type="date" /></li>
-      <li><button>Location</button></li>
+<!--      <li><button>Date</button></li>
+     <li><button>Location</button></li>   -->
       <li>
         <button id="clearFilterButton">Clear Filters</button>
       </li>
