--- a/src/pages/viewpost.html
+++ b/src/pages/viewpost.html
@@ -146,7 +146,7 @@
         <div class="ownerdetail">
           <div class="ownerimage">
             <img
-              id="proownerimage"
+              id="postownerimage"
               src="https://img.freepik.com/free-photo/close-up-confident-male-employee-white-collar-shirt-smiling-camera-standing-self-assured-against-studio-background_1258-26761.jpg?w=2000"
             />
           </div>
