--- a/src/pages/addpost.html
+++ b/src/pages/addpost.html
@@ -140,6 +140,11 @@
         float: center;
       }
     
+      #submitpostbutton:hover {
+    background-color: orangered;
+    color: white;
+  }
+
       @media (max-width: 770px) {
         .addpostview {
           display: grid;
@@ -231,7 +236,7 @@
                 id="reward"
                 cols="40"
                 name="Reward"
-                placeholder="Enter Reward(Optional)"
+                placeholder="Enter Reward (Optional)"
                 required
               />
               <h4>Possible Lost Date/Time</h4>
