--- a/src/pages/useracc.html
+++ b/src/pages/useracc.html
@@ -44,6 +44,7 @@
 
     .usersection {
         min-height: calc(100vh - 211px);
+        text-align: center;
     }
 
     @media (max-width: 770px) {
